cncProd/force-app/main/default/objects/Term_and_Condition__mdt/Term_and_Condition__mdt.object-meta.xml
<CustomObject>
    <label>Term and Condition</label>
    <pluralLabel>Term and Conditions</pluralLabel>
</CustomObject>