cncProd/force-app/main/default/objects/Term_and_Condition__mdt/fields/Display_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Display_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox will be displayed beside the text if ticked</inlineHelpText>
    <label>Display Checkbox</label>
    <type>Checkbox</type>
</CustomField>