cncProd/force-app/main/default/objects/Term_and_Condition__mdt/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <inlineHelpText>Ensure that it is unique</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>