cncProd/force-app/main/default/objects/Term_and_Condition__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>Object API Name of the Field to be updated</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>