cncProd/force-app/main/default/objects/Term_and_Condition__mdt/listViews/Aodigy_s_Reference.listView-meta.xml
<ListView>
    <fullName>Aodigy_s_Reference</fullName>
    <columns>MasterLabel</columns>
    <columns>Display_Checkbox__c</columns>
    <columns>Associated_Checkbox_Field_API_Name__c</columns>
    <columns>Identifier__c</columns>
    <columns>Object_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Aodigy&apos;s Reference</label>
</ListView>